# memfo

./: .gitignore  README.md  TimeMemory.py  pyproject.toml  runner.py
memfo/: TimeMemory.py  __init__.py  dumper.py  main.py  memfo.py  memfo_tmux.py  memfod.py
src/memfo/: main.py
