# HOW TO PUBLISH...
# Prep Work (ensure need modules are up-to-date):
#   sudo pacman -Syu python-pip
#   sudo pacman -Syu python-build
#   sudo pacman -Syu python-twine
#   -- antiquated way
#      python3 -m pip install --upgrade pip
#      python3 -m pip install --upgrade build
#      python3 -m pip install --upgrade twine
#
# HOW TO RUN LOCALLY
#
#   S=$PWD/src
#   PYTHONPATH=$S python3 -m memfo.main
#   PYTHONPATH=$S src/memfo/main.py
#
# HOW TO BUILD and RUN LOCALLY
# 
#   rm -r dist; python3 -m build; ls dist/. ; pip install -e . --break-system-packages ; memfo
#
# 
# PUBLIC Build and deploy (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build; ls dist/. ; python3 -m twine upload dist/*
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   pipx upgrade memfo || pipx install memfo # >= python3.11
#   --OR-- sudo python3 -m pip install memfo # <= python3.10
#   ## VISIT  https://pypi.org/project/memfo and delete old versions
#
# TEST Build and test (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build
#   python3 -m twine upload --repository testpypi dist/*
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   sudo python3 -m pip install --index-url https://test.pypi.org/simple/ --no-deps memfo
#   ## VISIT  https://test.pypi.org/project/memfo and delete old versions

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.3"
name = "memfo"
authors = [
    {name = "Joe Defen", email = "joedef@duck.com"},
]
description = "Display Tool for /proc/meminfo"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["meminfo", "/proc/meminfo", "RAM", "memory statistics"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/joedefen/memfo"
"Bug Tracker" = "https://github.com/joedefen/memfo/issues"

[project.scripts]
memfo = "memfo.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exclude = [
    "__pycache__",
]
