[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "memfo"
version = "1.0.4"
description = "Display Tool for /proc/meminfo"
authors = [
    { name = "Joe Defen", email = "joedef@duck.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["meminfo", "/proc/meminfo", "RAM", "memory statistics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/joedefen/memfo"
"Bug Tracker" = "https://github.com/joedefen/memfo/issues"

[project.scripts]
memfo = "memfo.main:run"