[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "memfo"
version = "2.0.1"
description = "Display Tool for /proc/meminfo"
authors = [
    { name = "Joe Defen", email = "joedef@duck.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["meminfo", "/proc/meminfo", "RAM", "memory statistics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    'console-window >= 1.0.0',
]

[project.scripts]
memfo = "memfo.main:run"
memfod = "memfo.memfod:main"

[project.urls]
"Homepage" = "https://github.com/joedefen/memfo"
"Bug Tracker" = "https://github.com/joedefen/memfo/issues"
